@@ -1,3 +1,8 @@
+2002-10-02  Eric Blake  <ebb9@email.byu.edu>
+
+	* src/bytecode.cpp (EmitConditionalExpression): Fix verifyerror in
+	non-boolean ?: expressions - bug 3311.
+
 2002-09-27  Chris Abbey  <jikes@cabbey.net>
 
 	* 1.17 release.
